--- a/e-commerce-website/src/App.css
+++ b/e-commerce-website/src/App.css
@@ -1,5 +1,19 @@
+@import '@fortawesome/fontawesome-svg-core/styles.css';
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+
+
+.App {
+  text-align: center;
+}
+
+.ellips{
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+  overflow: hidden;
 }
