--- a/e-commerce-website/src/Components/Navbar.css
+++ b/e-commerce-website/src/Components/Navbar.css
@@ -58,8 +58,8 @@ input {
   .input-container {
     position: relative;
     /* padding-top: 20px; */
-    border: 1px solid grey;
-    height: 30px;
+    /* border: 1px solid grey; */
+    height: 20px;
     border-radius: 5px;
     /* width: 80px; */
   }
